# groundhog

./: LICENSE.md  README.md  createEnv  requirements.txt  setup.cfg
examples/: compare_vector_and_scalar_ps.ipynb  compute_tcal.py
groundhog/: datared.py  mapping.py  scan.py  sd_fits.py  sd_fits_io.py  sd_fits_keys.py  sd_fits_utils.py  spectral_axis.py  telescopes.py  utils.py
groundhog/fluxscales/: bscales.py  calibrators.py
groundhog/fluxscales/tests/: test_calibrators.py
groundhog/fluxscales/tests/data/: 3C295.csv
groundhog/tests/: conftest.py  test_datared.py  test_sd_fits_io.py  test_sd_fits_utils.py  test_sdfits.py  test_spectral_axis.py  test_utils.py
groundhog/tests/data/: AGBT19B_332_04_scan5_ifnum4_intnum1_plnum0.ascii  README.rst  TGBT20A_506_01_scan6_ifnum0_plnum0.ascii  TGBT20A_506_01_scan6_ifnum0_plnum0_kms.ascii
notebooks/: compare_vector_and_scalar_ps.ipynb  position_switched_map_calibration.ipynb
