[metadata]
name = groundhog
version = '0.0.1'
author = Pedro Salas
author_email = psalas@nrao.edu
description = A receiver-agnostic GBT-specific calibration library for spectral line data
description_file = README.md
description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/astrofle/groundhog
project_urls =
    Source Code = https://github.com/astrofle/groundhog
license = MIT
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: Python :: 3

[options]
packages = find:
